--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "build": "npx rollup -c",
     "build-client-dev": "npx rollup -c -w",
-    "start": "npx rollup -c && node server.js"
+    "start": "node server.js"
   },
   "author": "Kwindla Hultman Kramer",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "deep-equal": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
