--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "deep-equal": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
+    "http-errors": "^1.7.2",
     "mediasoup": "^3.6.32",
     "mediasoup-client": "^3.6.21"
   },
