--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.16.4",
     "http-errors": "^1.7.2",
     "mediasoup": "^3.6.32",
-    "mediasoup-client": "^3.6.21"
+    "mediasoup-client": "^3.6.21",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "rollup": "^1.12.4",
